[metadata]
name = payping
version = 0.0.1
author = mohammad reza rahimaee
author_email = mohammad.rahimaee@gmail.com
description = manage payping.ir web service
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rahimaee/payping.git
project_urls =
    Bug Tracker = https://github.com/rahimaee/payping/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = False
packages = find:
python_requires = >=3.7
install_requires =
    requests
    certifi
    charset-normalizer
    idna
    urllib3